<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/question_marginTop"
        android:text="@string/question_text"
        android:textSize="@dimen/question_textSize"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/img1_width"
        android:layout_height="@dimen/img1_height"
        android:layout_marginStart="@dimen/img1_marginStart"
        android:layout_marginTop="@dimen/img1_marginTop"
        android:src="@drawable/tg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/img2_width"
        android:layout_height="@dimen/img2_height"
        android:layout_marginTop="@dimen/img2_marginTop"
        android:layout_marginEnd="@dimen/img2_marginEnd"
        android:src="@drawable/vk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_img1_marginTop"
        android:text="@string/text_img1"
        android:textSize="@dimen/text_img1_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_img2_marginTop"
        android:text="@string/text_img2"
        android:textSize="@dimen/text_img2_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:layout_width="181dp"
        android:layout_height="62dp"
        android:layout_marginTop="@dimen/button2_marginTop"
        android:backgroundTint="@color/button_color"
        android:text="@string/button1_text"
        android:textSize="@dimen/button1_textSize"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="62dp"
        android:layout_marginTop="@dimen/button2_marginTop"
        android:backgroundTint="@color/button_color"
        android:text="@string/button2_text"
        android:textSize="@dimen/button2_textSize"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:layout_width="@dimen/button3_width"
        android:layout_height="@dimen/button3_height"
        android:layout_marginBottom="@dimen/button3_marginBottom"
        android:text="@string/button3_text"
        android:textSize="@dimen/button3_textSize"
        android:backgroundTint="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>